2024赛季视觉调车代码

--- a/视觉组调车文档.md
+++ b/视觉组调车文档.md
@@ -87,7 +87,7 @@ CameraSetGain(hCamera, 230, 145, 230);//紫色
 
 #### 偏置更改：
 
-​	**行号：** $\textcolor{red}{166行}$      $\textcolor{blue}{yaw是上下，pitch是左右}$
+​	**行号：** $\textcolor{red}{166行}$        $\textcolor{blue}{yaw是左右，pitch是上下}$
 
 ```C++
 double *AngleSolver::WordToAngle(const Point3d &WorldForcast,double y_p_recv[4]) 
